<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="radio_button_glide_label">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_dm_label">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retrofit_label">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_download_library">Please select library to use to download file</string>
    <string name="notification_action_title">Check the status</string>

    <string name="notification_channel_id" translatable="false">file_download_channel</string>
    <string name="notification_channel_name" translatable="true">File Download</string>
    <string name="file_name_label">File name</string>
    <string name="status_label">Status</string>
    <string name="ok_button_label">OK</string>
    <string name="status_success">Success</string>
    <string name="status_failure">Fail</string>
    <string name="cloud_download_description">Placeholder Image</string>
    <string name="status_icon_description">Status Icon</string>
    <string name="download_button_label">Download</string>
    <string name="loading_button_label">We are loading</string>
</resources>
