<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/cloud_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud_download">

            <RadioButton
                android:id="@+id/radio_button_glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_button_glide_label"
                android:textSize="@dimen/default_text_size" />

            <RadioButton
                android:id="@+id/radio_button_dm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_button_dm_label"
                android:textSize="@dimen/default_text_size" />

            <RadioButton
                android:id="@+id/radio_button_retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_button_retrofit_label"
                android:textSize="@dimen/default_text_size" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>